--- a/css/main.css
+++ b/css/main.css
@@ -65,9 +65,17 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+h1 {
+	font-size: 1.2em;
+	margin-bottom: 1em;
+	margin-left: 10px;
+}
 
-
-
+.cat-video {
+	width: 95%;
+	max-width: 550px;
+	display: block;
+}
 
 
 
